[build-system]
requires = ["setuptools", "setuptools-scm>8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdsourcehinter-xblock"
dynamic = ["version"]
description = "crowdsourcehinter XBlock"
readme = "README.md"
license = "AGPL-3.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "six>=1.16.0",
    "xblock>=6.2.0",
]
keywords = ["crowdsourcehinter", "xblock"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.entry-points."xblock.v1"]
crowdsourcehinter = "crowdsourcehinter:CrowdsourceHinter"

[project.urls]
Homepage = "https://github.com/openedx/crowdsourcehinter"

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["crowdsourcehinter*"]

[tool.setuptools.exclude-package-data]
"*" = ["tests*", "*.tests*"]

[dependency-groups]
# Base test packages, no Django version pinned
test-base = ["pytest-cov"]
# Default test group: current supported Django version
test = [{include-group = "test-base"}, "Django>=5.2,<6.0"]
# Legacy Django 4.2 support
django42 = [{include-group = "test-base"}, "Django>=4.2,<5.0"]
quality = [{include-group = "test"}, "flake8"]
ci = ["tox", "tox-uv>=1"]
dev = [{include-group = "quality"}, {include-group = "ci"}]

[tool.uv]
package = true
conflicts = [
    [
        {group = "test"},
        {group = "django42"},
    ],
]

#  DO NOT EDIT constraint-dependencies DIRECTLY.
#  This list is managed by `edx_lint write_uv_constraints`
#  and will be overwritten the next time `make upgrade` is run.
#  - GLOBAL constraints: edit edx_lint/files/common_constraints.txt
#  - REPO-SPECIFIC constraints: edit [tool.edx_lint].uv_constraints in this file
constraint-dependencies = [
    "Django<6.0",
    "elasticsearch<7.14.0",
]
[tool.coverage.run]
branch = true
source = ["crowdsourcehinter"]
omit = ["*/tests/*", "*/migrations/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.semantic_release]
build_command = "python -m pip install --upgrade build && SETUPTOOLS_SCM_PRETEND_VERSION=$NEW_VERSION python -m build"
allow_zero_version = true
major_on_zero = false
